--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
                 <nav>   <!-- menu nav à placer en haut à droite-->
                     <ul>
-                        <li><a href="">Hébergements</a></li>
-                        <li><a href="">Activités</a></li>
-                        <li><a href="">S'inscrire</a></li>
+                        <li ><a class="item1"href="">Hébergements</a></li>
+                        <li ><a class="item2"href="">Activités</a></li>
+                        <li ><a class="item3"href="">S'inscrire</a></li>
                     </ul>
                  </nav>
                  
@@ -28,13 +28,13 @@
             </header> 
             <section id="container"> <!-- SECTION 1  Formulaire barre de recherche-->
                 <h1>Trouver votre hébergement pour des vacances de rêve</h1>
-                    <p>En plein centre ville ou en pleine nature</p>   
+                    <p class="precisions">En plein centre ville ou en pleine nature</p>   
 
                         <!-- Formulaire barre de recherche-->
                         <form method="post" action="traitement.php">
                             <i class="fas fa-map-marker-alt"></i> <!-- symbole emplacement-->
-                            <input type="text" name="ville" value="Marseille, France">
-                            <input type = "submit" name="rechercher" value= "Rechercher"> <!-- bouton rechercher coté droit arrondi-->
+                            <input class="barre" type="text" name="ville" value="Marseille, France">
+                            <input class="button" type = "submit" name="rechercher" value= "Rechercher"> <!-- bouton rechercher coté droit arrondi-->
                         </form>
 
                     <div id="filtres">
@@ -60,7 +60,7 @@
                             <figcaption>
                                 <h3>Auberge la Cannebière</h3> 
                                     <p>Nuit à partir de 25€</p>
-                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
                             </figcaption>
 
                         <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"alt="Hôtel du port">
@@ -75,21 +75,21 @@
                             <figcaption>
                                 <h3>Hôtel Les mouettes</h3>
                                     <p>Nuit à partir de 76€</p>
-                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
                             </figcaption> 
 
                         <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"alt="Hôtel de la mer">
                             <figcaption>
                                 <h3>Hôtel de la mer</h3> 
                                     <p>Nuit à partir de 46€</p>
-                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i><i class="fas fa-star gris"></i></p>
                             </figcaption> 
 
                         <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"alt="Auberge Le Panier">
                             <figcaption>
                                 <h3>Auberge Le Panier</h3>
                                     <p>Nuit à partir de 23€</p>
-                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
                             </figcaption> 
 
                         <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"alt="Hôtel chez Amina">
@@ -101,7 +101,7 @@
 
                     <p>Afficher plus</p>
                 </div>
-                
+
                     <h2>Les plus populaires</h2><!-- 3 photos meme format +arrondies+ background+ il manque les etoiles-->
                     <i class="fas fa-chart-line"></i>
 
@@ -116,14 +116,14 @@
                             <figcaption>
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3> 
                                     <p>Nuit à partir de 71€</p>
-                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
                             </figcaption> 
 
                         <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"alt="Hôtel Tout bleu et blanc">
                             <figcaption>
                                 <h3>Hôtel Tout bleu et blanc</h3>
                                     <p>Nuit à partir de 68€</p>
-                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
                             </figcaption> 
                 </section>
 
