--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     </div>                
                 </div>
                 
-                <div id="picker">
-                    <i class="fas fa-info-circle"></i><!-- PICKER-->
+                <div id="info">
+                    <i class="fas fa-info-circle"></i>
                     <p>Plus de 500 logements sont disponibles dans cette ville </p>
                 </div>
             </section>
