--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </section>
 
 
-            <section id=section2> <!-- SECTION 2 HEBERGEMENTS 6 photos meme format +arrondies+ background il manque les étoiles-->
+            <section id=section2> 
                 <div id="hebergement">
                     <h2>Hébergements à Marseille</h2>
                     <div id="card-container">    
@@ -120,31 +120,35 @@
                     </div>                   
                     <p>Afficher plus</p>
                 </div>
-                <div id="populaires">
-
-                    <h2>Les plus populaires</h2><!-- 3 photos meme format +arrondies+ background+ il manque les etoiles-->
-                    <i class="fas fa-chart-line"></i>
-
-                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"alt="Hôtel Le soleil du matin">
-                            <figcaption>
-                                <h3>Hôtel Le soleil du matin</h3> 
-                                    <p>Nuit à partir de 128€</p>
-                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                            </figcaption> 
-
-                        <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"alt="Au coeur de l'eau Chambres d'hôtes">
-                            <figcaption>
-                                <h3>Au coeur de l'eau Chambres d'hôtes</h3> 
-                                    <p>Nuit à partir de 71€</p>
-                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
-                            </figcaption> 
-
-                        <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"alt="Hôtel Tout bleu et blanc">
-                            <figcaption>
-                                <h3>Hôtel Tout bleu et blanc</h3>
-                                    <p>Nuit à partir de 68€</p>
-                                    <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
-                            </figcaption> 
+                <div id="populaires">       
+                    <h2>Les plus populaires<i class="fas fa-chart-line"></i></h2>
+                    
+                    <div id="card-container2">
+                        <figure class="card2">        
+                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"alt="Hôtel Le soleil du matin">
+                                <figcaption>
+                                    <h3>Hôtel Le soleil du matin</h3> 
+                                        <p>Nuit à partir de 128€</p>
+                                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                                </figcaption> 
+                        </figure>
+                        <figure class="card2">
+                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"alt="Au coeur de l'eau Chambres d'hôtes">
+                                <figcaption>
+                                    <h3>Au coeur de l'eau Chambres d'hôtes</h3> 
+                                        <p>Nuit à partir de 71€</p>
+                                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+                                </figcaption>
+                        </figure>         
+                        <figure class="card2">        
+                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"alt="Hôtel Tout bleu et blanc">
+                                <figcaption>
+                                    <h3>Hôtel Tout bleu et blanc</h3>
+                                        <p>Nuit à partir de 68€</p>
+                                        <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+                                </figcaption>
+                        </figure>
+                    </div>             
                 </div>
                 
             </section>
