--- a/index.html
+++ b/index.html
@@ -154,9 +154,10 @@
             </section>
 
 
-                <section id= section3><!-- SECTION 3 ACTIVITES pas de background + 6 photos format différent-->
+                <section id= section3>
             
                     <h2>Activités à Marseille</h2>
+                    <div id="card-container3">
                         <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"alt="Vieux Port">
                             <figcaption><h3>Vieux Port</h3></figcaption>
 
@@ -173,7 +174,8 @@
                             <figcaption><h3>Notre-Dame-de-la-Garde</h3> </figcaption> 
 
                         <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"alt="Parc Longchamp">
-                            <figcaption><h3>Parc Longchamp</h3</figcaption>                
+                            <figcaption><h3>Parc Longchamp</h3</figcaption>
+                    </div>                            
 
                 </section>
 
