--- a/index.html
+++ b/index.html
@@ -158,23 +158,34 @@
             
                     <h2>Activités à Marseille</h2>
                     <div id="card-container3">
-                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"alt="Vieux Port">
-                            <figcaption><h3>Vieux Port</h3></figcaption>
-
-                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"alt="Fort de Pomègues">
-                            <figcaption><h3>Fort de Pomègues </h3></figcaption> 
-
-                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"alt="Îles du Frioul">
-                            <figcaption><h3>Îles du Frioul</h3> </figcaption> 
-
-                        <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"alt="Parc National des Calanques">
-                            <figcaption><h3>Parc National des Calanques</h3> </figcaption> 
-
-                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"alt="Notre-Dame-de-la-Garde">
-                            <figcaption><h3>Notre-Dame-de-la-Garde</h3> </figcaption> 
-
-                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"alt="Parc Longchamp">
-                            <figcaption><h3>Parc Longchamp</h3</figcaption>
+                        <figure class="card3">
+                            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"alt="Vieux Port">
+                                <figcaption><h3>Vieux Port</h3></figcaption>
+                        </figure>
+                        <div class="column"> 
+                            <figure>            
+                                <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"alt="Fort de Pomègues">
+                                    <figcaption><h3>Fort de Pomègues </h3></figcaption>
+                            </figure>      
+                            <figure>
+                                <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"alt="Îles du Frioul">
+                                    <figcaption><h3>Îles du Frioul</h3> </figcaption>
+                            </figure>
+                        </div> 
+                        <figure class="card3">
+                            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"alt="Parc National des Calanques">
+                                <figcaption><h3>Parc National des Calanques</h3> </figcaption>
+                        </figure>
+                        <div class="column">          
+                            <figure>
+                                <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"alt="Notre-Dame-de-la-Garde">
+                                    <figcaption><h3>Notre-Dame-de-la-Garde</h3> </figcaption> 
+                            </figure>
+                            <figure>
+                                <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"alt="Parc Longchamp">
+                                    <figcaption><h3>Parc Longchamp</h3</figcaption>
+                            </figure>
+                        </div>
                     </div>                            
 
                 </section>
