TEST RESPONSIVE SECTION 1+ IMG populaires

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Reservia</title>
         <script src="https://kit.fontawesome.com/51ec2d69cc.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" media="screen and (max-width: 1280px)" href="petite_resolution.css" />   
+           
     </head>
         
     <body>
@@ -34,9 +34,9 @@
 
                         <!-- Formulaire barre de recherche-->
                         <form method="post" action="traitement.php">
-                            <i class="fas fa-map-marker-alt"></i> <!-- symbole emplacement-->
+                            <i class="fas fa-map-marker-alt"></i> 
                             <input class="barre" type="text" name="ville" value="Marseille, France">
-                            <input class="button" type = "submit" name="rechercher" value= "Rechercher"> <!-- bouton rechercher coté droit arrondi-->
+                            <input class="button" type = "submit" name="rechercher" value= "Rechercher"><i class="fas fa-search"></i>
                         </form>
 
                 <div id="filtres">
@@ -120,7 +120,7 @@
                                 </figcaption> 
                         </figure>
                     </div>                   
-                    <p>Afficher plus</p>
+                    <p class="plus">Afficher plus</p>
                 </div>
                 <div id="populaires">       
                     <h2>Les plus populaires<i class="fas fa-chart-line"></i></h2>
