--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
                 <nav>   <!-- menu nav à placer en haut à droite-->
                     <ul>
-                        <li ><a class="item1"href="">Hébergements</a></li>
-                        <li ><a class="item2"href="">Activités</a></li>
+                        <li ><a class="item1"href="#hebergement">Hébergements</a></li>
+                        <li ><a class="item2"href="#activite">Activités</a></li>
                         <li ><a class="item3"href="">S'inscrire</a></li>
                     </ul>
                  </nav>
@@ -39,7 +39,7 @@
                             <input class="button" type = "submit" name="rechercher" value= "Rechercher"><i class="fas fa-search"></i>
                         </form>
 
-                <div id="filtres">
+                <div id="filtres"> <!-- FILTRES -->
                         <p>Filtres</p>
                     <div class="filter">
                         <i class="fas fa-money-bill-wave"></i>   
@@ -158,7 +158,7 @@
 
                 <section id= section3>
             
-                    <h2>Activités à Marseille</h2>
+                    <h2 id=activite>Activités à Marseille</h2>
                     <div id="card-container3">
                         <figure class="card3">
                             <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"alt="Vieux Port">
