MODIF CSS/HTML POUR LES HOVER SECTION 1 + MODIF CSS IMAGES SECTION3

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
                         <p>Filtres</p>
                     <div class="filter">
                         <i class="fas fa-money-bill-wave"></i>   
-                        <p><a href="">Économique</a></p>
+                        <p>Économique</p>
                     </div>
                     <div class="filter">
                         <i class="fas fa-child"></i>
-                        <p><a href="">Familial</a></p> 
+                        <p>Familial</p> 
                     </div>    
                     <div class="filter">
                         <i class="fas fa-heart"></i></i>
-                        <p><a href="">Romantique</a></p>
+                        <p>Romantique</p>
                     </div>        
                     <div class="filter">
                         <i class="fas fa-dog"></i>       
-                        <p><a href="">Animaux autorisés</a></p>
+                        <p>Animaux autorisés</p>
                     </div>                
                 </div>
                 
