--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 </figcaption> 
                         </figure>
                         <figure class="card2">
-                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"></a>
+                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
                                 <figcaption>
                                     <h3>Au coeur de l'eau Chambres d'hôtes</h3> 
                                         <p>Nuit à partir de 71€</p>
